--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
                         android:id="@+id/textView5"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
+                        android:layout_gravity="center"
                         android:layout_weight="1"
                         android:gravity="center_horizontal|center_vertical"
                         android:text="Brasil"
@@ -101,6 +102,7 @@
                         android:id="@+id/textView7"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
+                        android:layout_gravity="center"
                         android:layout_weight="1"
                         android:gravity="center_horizontal|center_vertical"
                         android:text="México"
